--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+
+    <title>Trek Travel</title>
+
+
+    <link href="foundation.css" media="screen" rel="stylesheet" type="text/css">
+
     <link href="trek.css" media="screen" rel="stylesheet" type="text/css">
-    <title></title>
+
   </head>
   <body>
 
