Fixed table header to show only when display list of trips

--- a/index.html
+++ b/index.html
@@ -9,25 +9,29 @@
     <link href="foundation.css" media="screen" rel="stylesheet" type="text/css">
 
     <link href="trek.css" media="screen" rel="stylesheet" type="text/css">
-
   </head>
   <body>
 
     <button id = "load"> Trips</button>
 
     <div id = "alltrips">
-      <table>
-        <thead>
+      <!-- <table> -->
+        <!-- <thead>
           <th> ID</th>
           <th> Name</th>
           <th> Continent</th>
           <th> Weeks</th>
         </thead>
-      </table>
+        <tbody>
+
+        </tbody> -->
+      <!-- </table> -->
+
 
     </div>
 
     <script id="trips" type="text/template">
+
     <tr>
       <td><%- data.id %></td>
     <!-- data- is special attribute -->
