--- a/index.html
+++ b/index.html
@@ -51,25 +51,26 @@
 
     <script id= "one-trip" type="text/template" >
 
-      <!-- <div id="form" class = "colums small-4 meduim-2">
+      <form action="https://trektravel.herokuapp.com/trips/<%-data.id%>/reserve" method="post">
+        <section>
           <fieldset>
             <legend>Signup for This Trip</legend>
 
-            <label>Your Name</label>
-            <input type="text" placeholder="Enter your name here">
-            <label type="tet" class= "button"> Submit</label>
-          </fieldset>
-      </div> -->
-
-      <form action="https://petdibs.herokuapp.com/pets" method="post">
-        <section>
           <label>Name</label>
           <input type="text" id="name" name="name"></input>
+
+          <label>Age</label>
+          <input type="text" id="name" name="age"></input>
+
+          <label>Email</label>
+          <input type="text" id="name" name="email"></input>
+
         </section>
 
         <section class="button">
           <button type="submit">Submit</button>
         </section>
+      </fieldset>
     </form>
 
 
