--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 
     <title>Trek Travel</title>
 
-
     <link href="foundation.css" media="screen" rel="stylesheet" type="text/css">
 
     <link href="trek.css" media="screen" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <section id = "message"></section>
+    <section id = "errors"></section>
 
     <button id = "load"> Trips</button>
 
@@ -26,11 +27,9 @@
 
         </tbody> -->
       <!-- </table> -->
-
     </div>
 
     <script id="trips" type="text/template">
-
     <tr>
       <td><%- data.id %></td>
     <!-- data- is special attribute -->
@@ -42,16 +41,13 @@
     </script>
 
 <!-- Show trip -->
-    <div class="row">
+        <div id= "show-trip" ></div>
 
-    <div id= "show-trip" class="columns small -4 meduin 2">
+      <script id= "one-trip" type="text/template" >
+<div class="row">
 
-    </div>
-
-
-    <script id= "one-trip" type="text/template" >
-
-      <form action="https://trektravel.herokuapp.com/trips/<%-data.id%>/reserve" method="post">
+    <div class ="columns small-12 medium-6">
+      <form class="" action="https://trektravel.herokuapp.com/trips/<%-data.id%>/reserve" method="post">
         <section>
           <fieldset>
             <legend>Signup for This Trip</legend>
@@ -65,31 +61,30 @@
           <label>Email</label>
           <input type="text" id="name" name="email"></input>
 
-        </section>
-
         <section class="button">
           <button type="submit">Submit</button>
         </section>
       </fieldset>
     </form>
+  </div>
 
-
+    <div class="columns small-12 medium-6">
 
       <h1><%- data.name %> </h1>
       <h2><%- data.continent + " Continent" %></h2>
 
       <p><strong>Categoey: </strong><%- data.category %></p>
 
-      <p><strong>Cost: </strong><%- "$" + data.cost %></p>
+      <p><strong>Cost: </strong><%- "$" + Math.round(data.cost) %></p>
 
       <p><strong>Duration: </strong><%- data.weeks +" weeks" %></p>
 
 
-      <p> <h2>About this trip: </h2><%- data.about %></p>
+      <p><h2>About this trip: </h2><%- data.about %></p>
+  </div>
+</div>
 
     </script>
-
-  </div>
 
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
