--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 
     <title>Trek Travel</title>
 
-    <link href="foundation.css" media="screen" rel="stylesheet" type="text/css">
+    <!-- <link href="foundation.css" media="screen" rel="stylesheet" type="text/css"> -->
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css">
 
     <link href="trek.css" media="screen" rel="stylesheet" type="text/css">
   </head>
@@ -14,7 +16,7 @@
     <section id = "message"></section>
     <section id = "errors"></section>
 
-    <div id = "alltrips">
+    <section id = "alltrips">
       <table id = "table">
         <thead>
           <th> ID</th>
@@ -23,7 +25,7 @@
           <th> Weeks</th>
         </thead>
       </table>
-    </div>
+    </section>
 
     <!-- Show trips list -->
     <script id="trips" type="text/template">
@@ -40,7 +42,7 @@
     </script>
 
 <!-- Show information for a specific trip -->
-    <div id= "show-trip" ></div>
+    <section id= "show-trip" ></section>
 
     <script id= "one-trip" type="text/template" >
       <div class="row">
@@ -48,7 +50,7 @@
           <h1><%- data.name %> </h1>
           <h2><%- data.continent + " Continent" %></h2>
 
-          <p><strong>Categoey: </strong><%- data.category %></p>
+          <p><strong>Category: </strong><%- data.category %></p>
 
           <p><strong>Cost: </strong><%- "$" + Math.round(data.cost) %></p>
 
@@ -84,6 +86,8 @@
 
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
+
+    <script src="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.js"></script>
 
     <script src="trek.js" type="text/javascript"></script>
 
