Fixed a small bug to clear trip information befoshowing trip list

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
 
         <div class ="columns small-12 medium-6">
-          <form class="" action="https://trektravel.herokuapp.com/trips/<%-data.id%>/reserve" method="post">
+          <form id="reserve-form" action="https://trektravel.herokuapp.com/trips/<%-data.id%>/reserve" method="post">
           <section>
           <fieldset>
 
