Added responsive background image

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
     <link href="trek.css" media="screen" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <!-- <div id="wrapper">
+  <div class="row">
+      <div class="large-12  columns">  <body> -->
     <header>
-
       <h1 class="header">Welcome to TrekTravel</h1>
 
-    <button id = "load">Explore our Trips</button>
+      <button id = "load">Explore our Trips</button>
 
     <form  id="trips-continent" action="https://trektravel.herokuapp.com/trips/continent?query=" >
 
