--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css">
 
     <link href="trek.css" media="screen" rel="stylesheet" type="text/css">
+
   </head>
   <!-- <div id="wrapper">
   <div class="row">
@@ -21,6 +22,11 @@
 
     <form  id="trips-continent" action="https://trektravel.herokuapp.com/trips/continent?query=" >
 
+      <!-- <ul>
+      <li><a href="#">Asia</a></li>
+      <li><a href="#">Africa</a></li>
+    </ul> -->
+
 
     <select id = "continent" style="width:200px" >
       <option value="0"> </option>
@@ -31,11 +37,12 @@
       <option value="5">South America</option>
       <option value="6">North America</option>
     </select>
-    <button class="button success" type="submit">Submit</button>
+    <button class="success button" type="submit">Search by Continent</button>
+
+
   </form>
 
   </header>
-
 
     <section id = "message"></section>
     <section id = "errors"></section>
@@ -81,7 +88,7 @@
 
           <p><strong>Duration: </strong><%- data.weeks +" weeks" %></p>
 
-          <p><h2>About this trip: </h2><%- data.about %></p>
+          <p id="about-trip"><h2>About this trip: </h2><%- data.about %></p>
         </div>
 
         <div class ="columns small-12 medium-6">
