just for merging

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section  id="trips-continent" action="https://trektravel.herokuapp.com/trips/continent?query=" >
 
     <select id = "continent" style="width:200px" name ="Search by Continent" >
-      <option selected="">See All</option>
+      <option selected="Hello">"See All"</option>
       <option >Asia</option>
       <option >Africa</option>
       <option >Australasia</option>
