--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
       <div class="columns small-6 medium-5 large-5">
       <form  id="trips-continent" action="https://trektravel.herokuapp.com/trips/continent?query=" >
       <select id = "continent" style="width:200px" >
-        <option value="1">Asia</option>
-        <option value="2">Africa</option>
-        <option value="3">Australasia</option>
-        <option value="4">Europe</option>
-        <option value="5">South America</option>
+        <option value="3">Asia</option>
+        <option value="1">Africa</option>
+        <option value="2">Antractica</option>
+        <option value="3">Asia</option>
+        <option value="4">Australia</option>
+        <option value="5">Europe</option>
         <option value="6">North America</option>
+        <option value="7">South America</option>
       </select>
       <button id="button-continent" type="submit">Trips by Continent </button>
     </form>
