--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css">
 
     <link href="trek.css" media="screen" rel="stylesheet" type="text/css">
-
   </head>
-  <!-- <div id="wrapper">
-  <div class="row">
-      <div class="large-12  columns">  <body> -->
+
+  <body >
     <header>
       <div class="row">
         <div class="columns small-6 medium-3 large-3">
@@ -23,11 +21,10 @@
       <div class="columns small-6 medium-5 large-5">
       <form  id="trips-continent" action="https://trektravel.herokuapp.com/trips/continent?query=" >
       <select id = "continent" style="width:200px" >
-        <option value="3">Asia</option>
         <option value="1">Africa</option>
-        <option value="2">Antractica</option>
+        <option value="2">Antarctica</option>
         <option value="3">Asia</option>
-        <option value="4">Australia</option>
+        <option value="4">Australasia</option>
         <option value="5">Europe</option>
         <option value="6">North America</option>
         <option value="7">South America</option>
