More styling and cleaned up the code

--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
 
           <p><strong>Duration: </strong><%- data.weeks +" weeks" %></p>
 
-          <div class="about-trip">
-
+          <div class="about-trip" >
           <p ><h2>About this trip: </h2><%- data.about %></p></div>
 
         </div>
@@ -93,7 +92,7 @@
           <section>
           <fieldset>
 
-          <h2>Reserve a Spot in This Trip</h2>
+          <h2>Reserve a Spot for This Trip</h2>
 
           <label>Name</label>
           <input type="text" id="name" name="name"></input>
